--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container" id="welcome-form">
         <div class="text-white bg-dark border rounded border-0 border-light d-flex flex-column justify-content-between align-items-center flex-lg-row p-4 p-lg-5">
             <div class="text-center text-lg-start py-3 py-lg-1">
-                <h2 class="fw-bold mb-2"><strong>Enter UserName</strong></h2>
+                <h2 class="fw-bold mb-2"><strong>Enter UserNames</strong></h2>
             </div>
             <form class="d-flex justify-content-center flex-wrap my-2">
                 <div class="my-2"><input class="form-control" type="text" placeholder="Your Email"></div>
